@@ -1,0 +1,2 @@
+Visit this page first after restarting Windows/Linux CF service,
+then click <a href="../../../../index.cfm">here</a> to test shared app name bug.
